--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ ul {
     max-width: 1180px;
     margin-inline: auto;
     padding: var(--padding-inline-section);
+    overflow: hidden;
 }
 
 .flex {
@@ -82,6 +83,7 @@ ul {
     padding: 12px 24px;
     box-shadow: 0 0 2px var(--secondary-text-color);
     transition: 0.2s ease-out;
+    text-align: center;
 }
 
 .primary-button:hover {
@@ -118,6 +120,7 @@ ul {
 .main-nav {
     margin-top: 0px;
     justify-content: space-between;
+    position: relative;
 }
 
 .company-logo img {
@@ -128,6 +131,10 @@ ul {
 .nav-links ul {
     justify-content: end;
     gap: 40px;
+}
+
+.nav-toggle {
+    display: none;
 }
 
 
@@ -155,7 +162,7 @@ header {
 }
 
 .header-right img {
-    width: 600px;
+    width: 100%;
 }
 
 
@@ -168,8 +175,9 @@ header {
 }
 
 .logos {
-    justify-content: space-between;
+    justify-content: space-evenly;
     flex-wrap: wrap;
+    gap: 20px;
 }
 
 .logo {
@@ -185,6 +193,7 @@ header {
 
 .features-header {
     text-align: center;
+    margin-bottom: 40px;
 }
 
 .features-header h2 {
@@ -194,7 +203,7 @@ header {
 .features-area {
     flex-wrap: wrap;
     justify-content: center;
-    gap: 40px;
+    gap: 20px;
     margin-top: 20px;
 }
 
@@ -220,6 +229,10 @@ header {
     gap: 30px;
 }
 
+#second-big-feature {
+    flex-direction: row-reverse;
+}
+
 .feature-img img {
     width: 100%;
 }
@@ -232,7 +245,12 @@ header {
 
 /* examples-header*/
 
+.examples-section {
+    padding: 80px var(--padding-inline-section);
+}
+
 .examples-header {
+    text-align: center;
     flex-direction: column;
     gap: 20px;
 }
@@ -246,7 +264,7 @@ header {
 .examples-card {
     width: 23%;
     position: relative;
-    min-height: 300px;
+    height: 300px;
     background: black;
     background: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)), url(./assets/card1.jpg);
     background-size: cover;
@@ -292,6 +310,7 @@ header {
     flex-direction: column;
     gap: 30px;
     color: #ffffff;
+    text-align: center;
 }
 
 .cta-section-container p {
@@ -330,4 +349,5 @@ header {
     padding: 10px;
     justify-content: center;
     gap: 30px;
+    flex-wrap: wrap;
 }
